--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<div style="align: center;"><img src="logo.png"></div>
+<div style="margin-left:auto;margin-right:auto;width:463px;"><img src="logo.png"></div>
